--- a/fall/scifi/final/report/final.tex
+++ b/fall/scifi/final/report/final.tex
@@ -20,7 +20,7 @@ norms; where all that a man produced belonged to him, and to him alone. The main
 game on a flight crossing the Atlantic, which mysteriously crash lands, leaving him as the only survivor.
 When a gigantic lighthouse presents the only escape out of a cold ocean, he unquestioningly makes his way
 to the ornate entryway to Rapture proper. As he takes a personal submarine, called a ``bathysphere" down 
-ever deeper into the ocean, he is greeted by a pre-recorded message of Andrew Ryan, which serves as the 
+ever deeper into the ocean, he listens to a pre-recorded message of Andrew Ryan, which serves as the 
 introduction to the ideas on which Rapture were built. In a classic mid-century voice, he says ``...Is a man
 not entitled to the sweat of his brow? No, says the man in Washington. It belongs to the poor. No, says the 
 man in the Vatican. It belongs to God. No, says the man in Moscow. It belongs to everyone. I rejected those
@@ -29,7 +29,7 @@ answers."\textcite{Bioshock}
 The city goes to great lengths to emphasize the elevation of man almost as a god; the art deco design of the
 city features sculptures of men in heroic positions. However, as soon as the player enters the starting 
 building, a very different image of the city becomes clear. The person who opened the gate for our bathysphere
-is murdered by some humanoid figure, which we learn are called ``splicers". For the remainder of the game, 
+gets murdered by some humanoid fugure, which we learn are called ``splicers". For the remainder of the game, 
 the player faces increasingly dangerous splicers, which we discover are humans that have been corrupted by 
 a drug calles ADAM.
 
@@ -46,7 +46,8 @@ possible, and this essay shall attempt to show why that should be the case.
 
 \section{What led to Rapture?}
 Before talking about the eventual decline of Rapture, what drove Ryan to build it at all? Andrew Ryan's name
-itself is an anagram for the answer: the philosophy of 20th century Russian-American writer Ayn Rand. Rand 
+itself stands for the answer with an anagram : the philosophy of 
+20th century Russian-American writer Ayn Rand. Rand 
 developed her own unique philosophy called Objectivism, which in her own words "...is the concept of man
 as a heroic being, with his own happiness as the moral purpose of his life, with productive achievement as
 his noblest activity, and reason as his only moral absolute."\textcite{AtlasShrugged}
@@ -76,5 +77,61 @@ Ryan, maintaining that the individual has a right to his or her own labor, as we
 come from it, unsurprisingly has a strong dislike for both systems; after all, neither will allow him to 
 be the true owner of what he has produced. However, once Ryan had built Rapture to fulfill his dream of 
 true free enterprise, things started to go awry. 
-\printbibliography
+
+\section{The Rise and Fall of the Bioshock Empire}
+At a first glance, Rapture seems to represent the ideal city on a hill. It managed to draw like-minded men and
+women of science, art, and industry. However, the slightest glance beyond the superficial reveal that Rapture
+has utterly failed in remvoing itself from the problems of all societies. These include: crafty inhabitants
+who bend the rules for personal profit, drugs, and a deeper problem concerning the base of their morals. 
+
+Although Ryan founded Rapture in order to have as minimal amount of government interference in daily, as well 
+as business life, he places retrictions that would have disastrous ripple effects.  Although man retains
+the right to enjoy the fruits of his or her labor, he does not enjoy the ability to communicate with the 
+surface. This poses the obvious problem of stifling innovation and trade, since the market ends where the 
+surrounding ocean begins. Fontaine takes advantage of this flaw and quickly builds illegal trade routes to the
+surface, through which he manages to bring in drugs, among other illegal items. About midway through the game,
+the player encounters  Andrew Ryan himself, who reveals that the player had been genetically conditioned to
+mindlessly follow the orders once he heard the phrase ``Would you kindly...". This plan, orchestrated by 
+Fontaine himself, does more to show the pettiness of human beings and what lengths they go to for power than 
+any other aspect of the game. Power struggles such as these are commonplace in most organizations; 
+gethering the greatest minds certainly did not end the basest struggles that arise among human beings. 
+
+The second reason why Rapture finds itself in a state of stagnation and deterioration also cuases the player
+to have superhuman powers: drugs, and more specifically Adam. Right as the player enters the city, he 
+encounters a strange substance, which his aid Atlas tells him changes his genetic code. As drugs do, Adam 
+drove the citizens of Rapture to obsession, and a disturbing industry arose out of its production and 
+distribution. Here Ryan's ideologies also prolong the situtaion. Due to his aversion to legislation, he relies
+solely on his ``Great Chain" of industry to itself resolve this problem. This drug, which has the property to 
+accelerate healing and provides the player with telekinetic, electrical, and incendiary power, has a dark side 
+to its  production. Adam results from the secretions of a special type of sea slug. In order to mass produce
+Adam, producers take little girls from their mothers, and genetically modify them to act as hosts to the slugs. 
+In order to protect these little girls, or ``Little Sisters", other genetically modified humans, called
+``Big Daddies" protect them due to psychological manipulation. Although even Ryan recognizes this practice,
+and calls Little Sisters ``abominations" in a radio transmission to the player. Ryan's inability to act even 
+when faced with an evil enterprise, points to an even deeper problem regarding the basis of Rapture itself. 
+
+These two examples might lead the audience to ask the question: What morality underlies Rapture? Traditional 
+morality intentionally played very little part in Rapture's founding, with Ryan specifically mentioning that
+as a reason to escape the surface. In Rapture, the individual clearly does not enjoy as high a position as 
+the free market, else Ryan would have stepped in to eliminate the Adam business, rather than relying on the 
+``Great Chain" of society to slowly but surely move society in the right direction. Although Ryan and 
+Fontaine take center stage for the majority of the game, other major inhabitants do not fall far behind 
+in terms of morality, or lack thereof. Dr. Steinman from the beginning of the game performed unregulated
+plastic surgery on patients who wished for unnatural beauty; Sander Cohen, a deranged artist who takes pleasure
+in murdering his victims an artistic manner, has control over an entire section of Rapture; 
+Dr. Brigid Tenenbaum, a former contentration
+camp survivor, takes charge of manufacturing the Little Sisters. Given this context, it becomes clear that 
+outright doing away with any concept of right and wrong sets society on an ever steeper slope downward. If 
+the economy takes a greater value over the inhabitants of the city, why should Ryan bother to care about little 
+girls being mutated? Why should the ongoing genetic experiments be of any concern to the authorities? Herein
+lies the problem; Rapture was founded with the idea of doing the exact opposite of what surface societies did:
+increasing the size and authority of government. However, the opposite of that allowed evil to flourish, and do
+so while following society's ideals quite closely. This lack of grounding remains the main reason why Rapture
+could never hope to achieve something that was lasting: if there does not exist a solid moral grounding,
+anything can and eventually become permissible. As Levine also put it, "But they [science] also get used for 
+incredible ends. It's always a yin and a yang; and the question is: do you take it tot he extreme or do you take 
+a step back and go 'wait a minute'?"\textcite{LevineInterview}. 
+
+
+\printbibliography 
 \end{document}
