semester wrap up, finishing touches

--- a/fall/scifi/final/report/final.tex
+++ b/fall/scifi/final/report/final.tex
@@ -88,7 +88,8 @@ Although Ryan founded Rapture in order to have as minimal amount of government i
 as business life, he places retrictions that would have disastrous ripple effects.  Although man retains
 the right to enjoy the fruits of his or her labor, he does not enjoy the ability to communicate with the 
 surface. This poses the obvious problem of stifling innovation and trade, since the market ends where the 
-surrounding ocean begins. Fontaine takes advantage of this flaw and quickly builds illegal trade routes to the
+surrounding ocean begins.The game's antagonist, Fontaine, takes advantage of this flaw and quickly builds 
+illegal trade routes to the
 surface, through which he manages to bring in drugs, among other illegal items. About midway through the game,
 the player encounters  Andrew Ryan himself, who reveals that the player had been genetically conditioned to
 mindlessly follow the orders once he heard the phrase ``Would you kindly...". This plan, orchestrated by 
@@ -131,6 +132,21 @@ could never hope to achieve something that was lasting: if there does not exist 
 anything can and eventually become permissible. As Levine also put it, "But they [science] also get used for 
 incredible ends. It's always a yin and a yang; and the question is: do you take it tot he extreme or do you take 
 a step back and go 'wait a minute'?"\textcite{LevineInterview}. 
+
+\section{Conclusion}
+Bioshock, as a video game, pushed the traditional image of games as mindless, cheap fun. Its unique setting,
+sound design, and narrative were among the first to take a philosophical position such as Objectivism and 
+critique it in such a form. The sequel, \textit{Bioshock Infinite} continues the same trend of taking 
+an ideology and taking it to its logical extreme, in that case it deals with the idea of industrialization and
+American Exceptionalism. 
+
+Rapture, being founded on ideas intentionally contrary to those on the surface, finds itself
+with much of the same problems. Everybody who suppsedly propels Rapture forward ends up harming Rapture in
+the long term. This stems from the lack of any sort of concrete ideals that ground Rapture with a common goal. 
+Rapture in the end has no way of achieving the same lasting influence as some of the surface societies due to 
+the fact that when some new discovery actually causes more harm than good, there does not exist a compelling
+ideological reason to put an end to it, since production and the market take a higher position than human 
+dignity. 
 
 
 \printbibliography 
