sci fi report supplementary files

--- a/fall/scifi/final/report/reference.bib
+++ b/fall/scifi/final/report/reference.bib
@@ -33,7 +33,7 @@
 		publisher={Dutton}
 }
 @misc{Bioshock,
-	author="2KBoston",
+	author="Ken Levine",
 	title="Bioshock",
 	publisher="2K Games",
 	year="2007",
