--- a/fall/scifi/final/report/final.tex
+++ b/fall/scifi/final/report/final.tex
@@ -29,8 +29,9 @@ answers."\textcite{Bioshock}
 The city goes to great lengths to emphasize the elevation of man almost as a god; the art deco design of the
 city features sculptures of men in heroic positions. However, as soon as the player enters the starting 
 building, a very different image of the city becomes clear. The person who opened the gate for our bathysphere
-gets murdered by some humanoid fugure, which we learn are called ``splicers". For the remainder of the game, 
-the player faces increasingly dangerous splicers, which we discover are humans that have been corrupted by 
+gets murdered by some humanoid fugure, which the player learns are called ``splicers". For the 
+remainder of the game, 
+the player faces increasingly dangerous splicers, which are revealed to be humans that have been corrupted by 
 a drug calles ADAM.
 
 The most striking part of the game's story for many turns out to be the ideas that drove Ryan to build Rapture
@@ -46,9 +47,9 @@ possible, and this essay shall attempt to show why that should be the case.
 
 \section{What led to Rapture?}
 Before talking about the eventual decline of Rapture, what drove Ryan to build it at all? Andrew Ryan's name
-itself stands for the answer with an anagram : the philosophy of 
+itself stands for the answer with an anagram : 
 20th century Russian-American writer Ayn Rand. Rand 
-developed her own unique philosophy called Objectivism, which in her own words "...is the concept of man
+developed her own unique philosophy called Objectivism, which in her own words ``...is the concept of man
 as a heroic being, with his own happiness as the moral purpose of his life, with productive achievement as
 his noblest activity, and reason as his only moral absolute."\textcite{AtlasShrugged}
 
@@ -57,7 +58,7 @@ which at the time of the story (May 1960), fought an ideological battle on the s
 main issue with these two systems seems to stem from the idea of what a man produces being taken away. For 
 him, wealth and ``the work of man's brow" being redistributed to those who have not worked for it strips man
 away of his motivation to keep improving. In an early level of the game, once the player learns to ``hack"
-vending machines and buys health and ammo upgrades for cheaper, he comes on the audio system and says ``...
+vending machines and buy health and ammo upgrades for cheaper, he comes on the audio system and says ``...
 I should not need to remind each and every citizen of Rapture that free enterprise is the foundation on which
 our society has been established. Parasites will be punished."\textcite{Bioshock} He routinely refers to 
 people on the surface,without distinction to nationality or preferred system, implying that people 
@@ -81,7 +82,7 @@ true free enterprise, things started to go awry.
 \section{The Rise and Fall of the Bioshock Empire}
 At a first glance, Rapture seems to represent the ideal city on a hill. It managed to draw like-minded men and
 women of science, art, and industry. However, the slightest glance beyond the superficial reveal that Rapture
-has utterly failed in remvoing itself from the problems of all societies. These include: crafty inhabitants
+has utterly failed in remvoing itself from the problems of surface societies. These include: crafty inhabitants
 who bend the rules for personal profit, drugs, and a deeper problem concerning the base of their morals. 
 
 Although Ryan founded Rapture in order to have as minimal amount of government interference in daily, as well 
@@ -97,9 +98,9 @@ Fontaine himself, does more to show the pettiness of human beings and what lengt
 any other aspect of the game. Power struggles such as these are commonplace in most organizations; 
 gethering the greatest minds certainly did not end the basest struggles that arise among human beings. 
 
-The second reason why Rapture finds itself in a state of stagnation and deterioration also cuases the player
+The second reason why Rapture finds itself in a state of stagnation and deterioration also causes the player
 to have superhuman powers: drugs, and more specifically Adam. Right as the player enters the city, he 
-encounters a strange substance, which his aid Atlas tells him changes his genetic code. As drugs do, Adam 
+encounters a strange substance, which his guide Atlas tells him changes his genetic code. As drugs do, Adam 
 drove the citizens of Rapture to obsession, and a disturbing industry arose out of its production and 
 distribution. Here Ryan's ideologies also prolong the situtaion. Due to his aversion to legislation, he relies
 solely on his ``Great Chain" of industry to itself resolve this problem. This drug, which has the property to 
@@ -108,8 +109,8 @@ to its  production. Adam results from the secretions of a special type of sea sl
 Adam, producers take little girls from their mothers, and genetically modify them to act as hosts to the slugs. 
 In order to protect these little girls, or ``Little Sisters", other genetically modified humans, called
 ``Big Daddies" protect them due to psychological manipulation. Although even Ryan recognizes this practice,
-and calls Little Sisters ``abominations" in a radio transmission to the player. Ryan's inability to act even 
-when faced with an evil enterprise, points to an even deeper problem regarding the basis of Rapture itself. 
+and calls Little Sisters ``abominations" in a radio transmission to the player, Ryan's inability to act even 
+when faced with an evil enterprise points to an even deeper problem regarding the basis of Rapture itself. 
 
 These two examples might lead the audience to ask the question: What morality underlies Rapture? Traditional 
 morality intentionally played very little part in Rapture's founding, with Ryan specifically mentioning that
@@ -129,24 +130,25 @@ lies the problem; Rapture was founded with the idea of doing the exact opposite 
 increasing the size and authority of government. However, the opposite of that allowed evil to flourish, and do
 so while following society's ideals quite closely. This lack of grounding remains the main reason why Rapture
 could never hope to achieve something that was lasting: if there does not exist a solid moral grounding,
-anything can and eventually become permissible. As Levine also put it, "But they [science] also get used for 
+anything can and eventually become permissible. As Levine also put it, ``But they [science] also get used for 
 incredible ends. It's always a yin and a yang; and the question is: do you take it tot he extreme or do you take 
 a step back and go 'wait a minute'?"\textcite{LevineInterview}. 
 
 \section{Conclusion}
-Bioshock, as a video game, pushed the traditional image of games as mindless, cheap fun. Its unique setting,
+Thus the city of Rapture, initially a place for the brightest minds to achieve their full potential, ended up 
+suffering from exactly the same problems that surface societies suffer. The idea that less restrictions by the 
+government would lead to a more fulfilling life for its inhabitants, while pleasing on paper, ended up leading
+the city to demise from internal conflict. The lack of rules and  enforcement by the government allowed the rules 
+to be bent in such a way that lead to a power struglle between Fontaine and Ryan; this lack of order also
+allowed the underground Adam market to thrive at the expense of the city's young girls, and the lack of anything 
+to call right and wrong also stressed this flaw.
+
+Bioshock, as a video game, challenged the traditional image of games as mindless, cheap fun. Its unique setting,
 sound design, and narrative were among the first to take a philosophical position such as Objectivism and 
 critique it in such a form. The sequel, \textit{Bioshock Infinite} continues the same trend of taking 
 an ideology and taking it to its logical extreme, in that case it deals with the idea of industrialization and
-American Exceptionalism. 
-
-Rapture, being founded on ideas intentionally contrary to those on the surface, finds itself
-with much of the same problems. Everybody who suppsedly propels Rapture forward ends up harming Rapture in
-the long term. This stems from the lack of any sort of concrete ideals that ground Rapture with a common goal. 
-Rapture in the end has no way of achieving the same lasting influence as some of the surface societies due to 
-the fact that when some new discovery actually causes more harm than good, there does not exist a compelling
-ideological reason to put an end to it, since production and the market take a higher position than human 
-dignity. 
+American Exceptionalism.  For audiences interested in this perspective or enjoying one of the defining video 
+game experiences of the time should highly consider adding Bioshock to their list. 
 
 
 \printbibliography 
